--- a/PrivacyPolicy/index.html
+++ b/PrivacyPolicy/index.html
@@ -5,6 +5,6 @@
         <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8"></header>
     </head>
     <body>
-        <a href="about.html">about</a>
+        <a href="about.html">about me</a>
     </body>
 </html>
