Add iap information
Add iap information

--- a/isREVERsi/privacy_policy.html
+++ b/isREVERsi/privacy_policy.html
@@ -28,7 +28,7 @@
                   </p> <p>
                     The terms used in this Privacy Policy have the same meanings
                     as in our Terms and Conditions, which is accessible at
-                    isREVERsi unless otherwise defined in this Privacy
+                    <a ra href="terms_and_conditions.html" target="_blank">isREVERsi<\a> unless otherwise defined in this Privacy
                     Policy.
                   </p> <p><strong>Information Collection and Use</strong></p> <p>
                     For a better experience, while using our Service,
@@ -38,7 +38,7 @@
                     retained on your device and is not collected by me in any way.
                   </p> <p>
                     The app does use third party services that may collect
-                    information used to identify you.
+                    information used to identify you. And we may also collect information about your in-app purchases (provided that we never receive your payment or credit card information).
                   </p> <div><p>
                       Link to privacy policy of third party service providers
                       used by the app
