--- a/isREVERsi/privacy_policy.html
+++ b/isREVERsi/privacy_policy.html
@@ -28,7 +28,7 @@
                   </p> <p>
                     The terms used in this Privacy Policy have the same meanings
                     as in our Terms and Conditions, which is accessible at
-                    <a ra href="terms_and_conditions.html" target="_blank">isREVERsi<\a> unless otherwise defined in this Privacy
+                    <a href="terms_and_conditions.html" target="_blank">isREVERsi</a> unless otherwise defined in this Privacy
                     Policy.
                   </p> <p><strong>Information Collection and Use</strong></p> <p>
                     For a better experience, while using our Service,
