--- a/isREVERsi/terms_and_conditions.html
+++ b/isREVERsi/terms_and_conditions.html
@@ -7,6 +7,7 @@
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
     </head>
     <body>
+    <a href="index.html">about</a>
     <h2>Terms &amp; Conditions</h2> <p>
                     By downloading or using the app, these terms will
                     automatically apply to you – you should make sure therefore
