--- a/isREVERsi/privacy_policy.html
+++ b/isREVERsi/privacy_policy.html
@@ -7,6 +7,7 @@
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
     </head>
     <body>
+    <a href="index.html">about</a>
     <h2>Privacy Policy</h2> <p>
                     Ranixculiva built the isREVERsi app as
                     a Free app. This SERVICE is provided by
