--- a/isREVERsi.zh-Hant/privacy_policy.html
+++ b/isREVERsi.zh-Hant/privacy_policy.html
@@ -7,6 +7,7 @@
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
     </head>
     <body>
+    <a href="index.html">about</a>
     <h2>Privacy Policy</h2> <p>
                     Ranixculiva built the isREVERsi app as
                     a Free app. This SERVICE is provided by
@@ -28,7 +29,7 @@
                   </p> <p>
                     The terms used in this Privacy Policy have the same meanings
                     as in our Terms and Conditions, which is accessible at
-                    isREVERsi unless otherwise defined in this Privacy
+                    <a href="terms_and_conditions.html" target="_blank">isREVERsi</a> unless otherwise defined in this Privacy
                     Policy.
                   </p> <p><strong>Information Collection and Use</strong></p> <p>
                     For a better experience, while using our Service,
@@ -38,7 +39,7 @@
                     retained on your device and is not collected by me in any way.
                   </p> <p>
                     The app does use third party services that may collect
-                    information used to identify you.
+                    information used to identify you. And we may also collect information about your in-app purchases (provided that we never receive your payment or credit card information).
                   </p> <div><p>
                       Link to privacy policy of third party service providers
                       used by the app
@@ -112,7 +113,7 @@
                   </p> <p><strong>Contact Us</strong></p> <p>
                     If you have any questions or suggestions about
                     my Privacy Policy, do not hesitate to contact
-                    me at ranixculiva@gmail.com.
+                    me at <a href="mailto:ranixculiva@gmail.com">ranixculiva@gmail.com</a>.
                   </p> <p>
                     This privacy policy page was created at
                     <a href="https://privacypolicytemplate.net" target="_blank">privacypolicytemplate.net</a>
