--- a/isREVERsi/index.html
+++ b/isREVERsi/index.html
@@ -1,13 +1,25 @@
 <html>
     <head>
+        <style type="text/css">
+        .center {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 50%;
+        } 
+        </style>
         <title>about</title>
         <header><meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.6, minimum-scale=1.0, user-scalable=yes'>
         <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8"></header>
     </head>
     <body>
-        <font face="ChalkboardSE-Bold">
-        Please read my <a href="privacy_policy.html">privacy policy</a> and  <a href="terms_and_conditions.html">terms and conditions</a>.<br />
-        If you have any question, please feel free to <a href="mailto:ranixculiva@gmail.com">contact me</a>.
+        <div>
+        <p style="text-align: center;"><img src="images\logo.svg" style="max-width: 200px"></img></p>
+        <font face="ChalkboardSE-Bold" >
+            <p style="text-align: center; max-width: 100%">Please read my <a href="privacy_policy.html">privacy policy</a> and  <a href="terms_and_conditions.html">terms and conditions</a>.<br />
+            If you have any question, please feel free to <a href="mailto:ranixculiva@gmail.com">contact me</a>.
+            </p>
         </font>
+        </div>
     </body>
 </html>
