--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>你好，GitHub</title>
+    <title>Ranix's Project</title>
   </head>
   <body>
-    <h1>覺得厲害</h1>
+    <a href="https://github.com/Ranixculiva/simple_calculator.git" target="_blank">a simple calculator</a>
+    <a href="https://github.com/Ranixculiva/8051_multithread_semaphore.git" target="_blank">8051 multithread semaphore</a>
+    <a href="https://github.com/Ranixculiva/isREVERsi_app.git" target="_blank">isREVERsi</a>
   </body>
 </html>
 
