--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Ranix's Project</title>
   </head>
   <body>
-    <a href="https://github.com/Ranixculiva/simple_calculator.git" target="_blank">a simple calculator</a>
-    <a href="https://github.com/Ranixculiva/8051_multithread_semaphore.git" target="_blank">8051 multithread semaphore</a>
-    <a href="https://github.com/Ranixculiva/isREVERsi_app.git" target="_blank">isREVERsi</a>
+    <li><a href="https://github.com/Ranixculiva/simple_calculator.git" target="_blank">a simple calculator</a></li>
+    <li><a href="https://github.com/Ranixculiva/8051_multithread_semaphore.git" target="_blank">8051 multithread semaphore</a></li>
+    <li><a href="https://github.com/Ranixculiva/isREVERsi_app.git" target="_blank">isREVERsi</a></li>
   </body>
 </html>
 
