Implement dark mode feature with theme switching functionality in PawPrints. Updated index.html to include a theme toggle button and linked Material Icons. Enhanced styles in styles.css to support light and dark themes, and added JavaScript functions for theme initialization and toggling based on user preference.

--- a/PawPrints/index.html
+++ b/PawPrints/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PawPrints - Find, Share & Love Cats!</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
     <div class="container">
@@ -22,6 +23,9 @@
         <p id="join_text"></p>
         <a href="#" class="cta" id="cta"></a>
     </div>
+    <button class="theme-switch" aria-label="Toggle dark mode">
+        <span class="material-icons">dark_mode</span>
+    </button>
     <script src="js/script.js"></script>
 </body>
 </html>
